// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input snapshots > matches snapshot — contrast variant 1`] = `
<input
  class="px-3 py-2 flex w-full rounded-md border text-base ring-offset-white placeholder:text-slate-500 focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm file:border-0 file:bg-transparent file:text-sm file:font-medium dark:ring-offset-slate-950 dark:focus-visible:ring-slate-300 border-grey-500 bg-contrast text-textContrast focus-visible:ring-slate-950"
  placeholder="placeholder"
/>
`;

exports[`Input snapshots > matches snapshot — default variant 1`] = `
<input
  class="px-3 py-2 flex w-full rounded-md border text-base ring-offset-white placeholder:text-slate-500 focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm file:border-0 file:bg-transparent file:text-sm file:font-medium dark:ring-offset-slate-950 dark:focus-visible:ring-slate-300 border-slate-200 bg-white text-slate-900 focus-visible:ring-slate-950 dark:border-slate-800 dark:bg-slate-950 dark:text-slate-50"
  placeholder="placeholder"
/>
`;

exports[`Input snapshots > matches snapshot — search variant 1`] = `
<input
  class="px-3 py-2 flex w-full border text-base ring-offset-white focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm file:border-0 file:bg-transparent file:text-sm file:font-medium dark:ring-offset-slate-950 dark:focus-visible:ring-slate-300 bg-background-elevated text-text placeholder:text-text-subdued rounded-full h-12"
  placeholder="placeholder"
/>
`;
